--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
     <link rel="shortcut icon" href="./img/Logo.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./scss/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body> 
 <header class="encabezado">
-    <nav class="navegador">
+    <nav class="navegador"> 
         <img class="logo" src="./img/Logo.jpg" alt="Logo de la empresa">
+        <i class="ícono-menu fa-solid fa-bars"></i>
         <ul class="navegador-links">
           <li class="navegador-link"><a href="./index.html"> Inicio</a></li>
           <li class="navegador-link"><a href="./nosotros.html"> Nosotros</a>
@@ -45,17 +47,17 @@
     <section class="tarjetas">
         <div class="sol">
             <h3 class="titulo"> Anteojos para sol </h3>
-            <img class="sol-img" src="./img/sol.JPG" alt="productos">
+            <img class="sol-img" src="./img/sol1.jpg" alt="productos">
             <button class="botonver"> Ver más</button>
          </div>
          <div class="rx">
             <h3 class="titulo"> Armazones </h3>
-            <img class="rx-img" src="./img/rx.jpeg" alt="productos">
+            <img class="rx-img" src="./img/rx1.jpg" alt="productos">
             <button class="botonver"> Ver más</button>
          </div>
          <div class="lc">
             <h3 class="titulo"> Lentes de Contacto</h3>
-            <img class="lc-img" src="./img/lc.jpg" alt="productos">
+            <img class="lc-img" src="./img/lc1.jpg" alt="productos">
             <button class="botonver"> Ver más</button>
          </div>
     </section>
