--- a/nosotros.html
+++ b/nosotros.html
@@ -5,15 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros</title>
     <link rel="shortcut icon" href="./img/Logo.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./scss/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    </head>
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
     <body>
         <header class="encabezado">
             <nav class="navegador">
                 <img class="logo" src="./img/Logo.jpg" alt="Logo de la empresa">
+                <i class="ícono-menu fa-solid fa-bars"></i>
                 <ul class="navegador-links">
                   <li class="navegador-link"><a href="./index.html"> Inicio</a></li>
                   <li class="navegador-link"><a href="./nosotros.html"> Nosotros</a>
@@ -38,9 +40,8 @@
     <aside>
         <p class="nuestras-marcas"> NUESTRAS MARCAS</p>
         <section class="marcas">
-<img class="marca1" src="./img/360.png" alt="">
-<img class="marca2" src="./img/ae.png" alt="">
-<img class="marca3" src="./img/mormaii.png" alt="">
+<img class="marca1" src="./img/ae.jpg" alt="">
+<img class="marca2" src="./img/mormaii.png" alt="">
 <img class="marca4" src="./img/rb.png" alt="">
 <img class="marca5" src="./img/pcda.png" alt="">
 <img class="marca6" src="./img/oakley.png" alt="">
