--- a/contacto.html
+++ b/contacto.html
@@ -5,24 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>\
     <link rel="shortcut icon" href="./img/Logo.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./scss/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <header class="encabezado">
-            <nav class="navegador">
-                <img class="logo" src="./img/Logo.jpg" alt="Logo de la empresa">
-                <ul class="navegador-links">
-                  <li class="navegador-link"><a href="./index.html"> Inicio</a></li>
-                  <li class="navegador-link"><a href="./nosotros.html"> Nosotros</a>
-                  <li class="navegador-link"><a href="./contacto.html"> Contacto</a>
-                </ul>
-            </nav>
-            <div class="portada">
-            <img class="portada-imagen" src="./img/portada.jpg" alt="Encabezado">
-             </div>
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
+<body>
+<header class="encabezado">
+    <nav class="navegador">
+        <img class="logo" src="./img/Logo.jpg" alt="Logo de la empresa">
+        <i class="ícono-menu fa-solid fa-bars"></i>
+        <ul class="navegador-links">
+          <li class="navegador-link"><a href="./index.html"> Inicio</a></li>
+          <li class="navegador-link"><a href="./nosotros.html"> Nosotros</a>
+          <li class="navegador-link"><a href="./contacto.html"> Contacto</a>
+        </ul>
+    </nav>
+    <div class="portada">
+        <img class="portada-imagen" src="./img/portada.jpg" alt="Encabezado">
+    </div>
         </header>
     <main>
       <form class="formulario-contacto" action="">
