--- a/contacto.html
+++ b/contacto.html
@@ -19,6 +19,7 @@
             <ul class="navegador-links">
               <li class="navegador-link"><a href="./index.html"> Inicio</a></li>
               <li class="navegador-link"><a href="./nosotros.html"> Nosotros</a>
+              <li class="navegador-link"><a href="./productos.html"> Productos</a> 
               <li class="navegador-link"><a href="./contacto.html"> Contacto</a>
             </ul>
         </nav>
