--- a/productos.html
+++ b/productos.html
@@ -28,40 +28,101 @@
      </div>
 </header>
 <main>
-   <div class="contenedor-pagos">
-        <div class="cuotas">
-        <h1 class="título-cuotas"> 3 cuotas sin interés </h1>
-        <p class="descripción-cuotas">Con todas las tarjetas de crédito</p>
-        <img class="tarjeta-img" src="./img/tarjeta.jpg" alt="Formas de pago">
+    <section class="gallery">
+    <h3>Nuestros Productos</h3>
+    <h2>Te ofrecemos una amplia selección de productos.</h2>
+
+    <div class="gallery-content">
+      <div class="gallery-products">
+        <div>
+          <img src="./img/rb aviator.jfif" alt="Ray Ban Aviator" />
+          <h4>Ray Ban Aviator</h4>
+        </div>
+
+        <div class="colour-circle">
+          <div class="colour"></div>
+          <div class="colour"></div>
+          <div class="colour"></div>
+        </div>
+
+        <a href="">Comprar ahora →</a>
+      </div>
+
+      <div class="gallery-products">
+        <div>
+          <img src="./img/rb justin.jfif" alt="Ray Ban Justin" />
+          <h4>Ray Ban Justin</h4>
+        </div>
+
+        <div class="colour-circle">
+          <div class="colour"></div>
+          <div class="colour"></div>
+          <div class="colour"></div>
+        </div>
+
+        <a href="">Comprar ahora →</a>
+      </div>
+
+      <div class="gallery-products">
+        <div>
+          <img src="./img/rb erika.jfif" alt="Ray Ban Erika" />
+          <h4>Ray Ban Erika</h4>
+        </div>
+
+        <div class="colour-circle">
+          <div class="colour"></div>
+          <div class="colour"></div>
+          <div class="colour"></div>
+          <div class="colour"></div>
+        </div>
+
+        <a href="">Comprar ahora →</a>
+      </div>
+
+      <div class="gallery-products">
+        <div>
+          <img src="./img/vulk rs 1.jfif" alt="Vulk RS1" />
+          <h4>Vulk Rolling Stones Burden</h4>
+        </div>
+
+        <div class="colour-circle">
+          <div class="colour"></div>
+          <div class="colour"></div>
+          <div class="colour"></div>
+        </div>
+
+        <a href="">Comprar ahora →</a>
+      </div>
+
+      <div class="gallery-products">
+        <div>
+          <img src="./img/vulk rs2.jfif" alt="Vulk RS2" />
+          <h4>Vulk Rolling Stones Tattoo You</h4>
+        </div>
+
+        <div class="colour-circle">
+          <div class="colour"></div>
+          <div class="colour"></div>
+        </div>
+
+        <a href="">Comprar ahora →</a>
+      </div>
+
+      <div class="gallery-products">
+        <div>
+          <img src="./img/vulk rs3.jfif" alt="Vulk RS3" />
+          <h4>Vulk Rolling Shattered</h4>
+        </div>
+        <div class="colour-circle">
+            <div class="colour"></div>
+            <div class="colour"></div>
+          </div>
+  
+          <a href="">Comprar ahora →</a>
+        </div>
     </div>
-        <div class="efectivo">
-        <h1 class="titulo-cash"> 10% de descuento </h1>
-        <p class="descripción-cash">Pagando en efectivo o transferencia </p> 
-        <img class="efectivo-img" src="./img/efectivo.png" alt="Formas de pago">
-    </div>
-        <div class="envíos">
-        <h1>Envíos a todo el pais.</h1> 
-        <img class="envío-img" src="./img/envío.png" alt="Envío">
-    </div>
+  </section>
 </main>
-<aside>
-    <section class="tarjetas">
-        <div class="sol">
-            <h3 class="titulo"> Anteojos para sol </h3>
-            <img class="sol-img" src="./img/sol1.jpg" alt="productos">
-            <button class="botonver"> Ver más</button>
-         </div>
-         <div class="rx">
-            <h3 class="titulo"> Armazones </h3>
-            <img class="rx-img" src="./img/rx1.jpg" alt="productos">
-            <button class="botonver"> Ver más</button>
-         </div>
-         <div class="lc">
-            <h3 class="titulo"> Lentes de Contacto</h3>
-            <img class="lc-img" src="./img/lc1.jpg" alt="productos">
-            <button class="botonver"> Ver más</button>
-         </div>
-    </section>
 </aside>
 <footer class="piedepagina">
     <div>
@@ -83,5 +144,3 @@
 <script src="./index.js"></script>
 </body>
 </html>
-
-
