--- a/productos.html
+++ b/productos.html
@@ -29,20 +29,23 @@
      </div>
 </header>
 <main>
-  <div class="container">
-    <div class="row">
-        <!-- Elementos generados a partir del JSON -->
-        <main id="items" class="col-sm-8 row"></main>
-        <!-- Carrito -->
-        <aside class="col-sm-4">
-            
-            <h2>Carrito</h2>
-            <!-- Elementos del carrito -->
-            <ul id="carrito" class="list-group"></ul>
-            <hr>
-            <!-- Precio total -->
-            <p class="text-right">Total:$<span id="total"></span></p>
-            <button id="boton-vaciar" class="btn btn-danger">Vaciar</button>
+    <div class="container">
+        <div class="row">
+            <!-- Elementos generados a partir del JSON -->
+            <main id="items" class="col-sm-8 row"></main>
+            <!-- Carrito -->
+            <aside class="col-sm-4">
+                <h2>Carrito</h2>
+                <!-- Elementos del carrito -->
+                <ul id="carrito" class="list-group"></ul>
+                <hr>
+                <!-- Precio total -->
+                <p class="text-right">Total:$ <span id="total">$0.00</span></p>
+                <button id="boton-vaciar" class="btn btn-danger">Vaciar</button>
+                <button id="comprar" class=" btn btn-dark"> Comprar</button>
+			</div>
+        </div>
+	
 </main>
 </aside>
 <footer class="piedepagina">
